# transactd

./: .gitignore  BUILD_UNIX-JA.md  BUILD_WIN-JA.md  CMakeLists.txt  README-JA.md  README.md  README_ORMSRCGEN  README_ORMSRCGEN-JA  README_ORMSRCGEN.md  RELEASE_NOTE  RELEASE_NOTE-JA  RELEASE_NOTE-JA.md  RELEASE_NOTE.md  index_ja.html  transactd.gemspec
patch/: transactd-win-mariadb-10.0.10.patch  transactd-win-mariadb-10.0.11.patch  transactd-win-mariadb-10.0.12.patch  transactd-win-mariadb-10.0.13.patch  transactd-win-mariadb-10.0.14.patch  transactd-win-mariadb-10.0.15.patch  transactd-win-mariadb-10.0.16.patch  transactd-win-mariadb-10.0.19.patch  transactd-win-mariadb-10.0.20.patch  transactd-win-mariadb-10.0.21.patch  transactd-win-mariadb-10.0.23.patch  transactd-win-mariadb-10.0.24.patch  transactd-win-mariadb-10.0.25.patch  transactd-win-mariadb-10.0.26.patch  transactd-win-mariadb-10.0.27.patch  transactd-win-mariadb-10.0.30.patch  transactd-win-mariadb-10.0.31.patch  transactd-win-mariadb-10.1.10.patch  transactd-win-mariadb-10.1.11.patch  transactd-win-mariadb-10.1.13.patch  transactd-win-mariadb-10.1.14.patch  transactd-win-mariadb-10.1.17.patch  transactd-win-mariadb-10.1.18.patch  transactd-win-mariadb-10.1.19.patch  transactd-win-mariadb-10.1.22.patch  transactd-win-mariadb-10.1.28.patch  transactd-win-mariadb-10.1.8.patch  transactd-win-mariadb-10.1.9.patch  transactd-win-mariadb-10.2.11.patch  transactd-win-mariadb-10.2.13.patch  transactd-win-mariadb-10.2.6.patch  transactd-win-mariadb-10.2.7.patch  transactd-win-mariadb-10.2.8.patch  transactd-win-mariadb-5.5.30.patch  transactd-win-mariadb-5.5.31.patch  transactd-win-mariadb-5.5.32.patch  transactd-win-mariadb-5.5.33.patch  transactd-win-mariadb-5.5.42.patch  transactd-win-mariadb-5.5.43.patch  transactd-win-mariadb-5.5.48.patch  (+40 more)
source/bzs/db/: IBlobBuffer.h  blobBuffer.h  blobStructs.h
source/bzs/db/engine/mysql/: IReadRecords.h  bookmark.h  database.cpp  database.h  dbManager.cpp  dbManager.h  errorMessage.cpp  errorMessage.h  fieldAccess.h  ha.cpp  ha.h  mydebuglog.cpp  mydebuglog.h  mysqlInternal.h  mysqlProtocol.cpp  mysqlProtocol.h  mysqlThd.cpp  mysqlThd.h  percentageKey.h
source/bzs/db/protocol/: ICommandExecuter.h
source/bzs/db/protocol/hs/: hsCommandExecuter.cpp  hsCommandExecuter.h
source/bzs/db/protocol/tdap/: btrDate.cpp  btrDate.h  fieldComp.h  myDateTime.cpp  myDateTime.h  tdapRequest.h  tdapSchema.cpp  tdapSchema.h  tdapcapi.h  uri.h
source/bzs/db/protocol/tdap/client/: activeTable.cpp  activeTable.h  activeTableImple.h  bulkInsert.h  client.cpp  client.h  connMgr.cpp  connMgr.h  connectionPool.cpp  connectionPool.h  database.cpp  database.h  databaseFactory.cpp  databaseManager.h  dbDef.cpp  dbDef.h  dllmain.cpp  errorMessage.cpp  errorMessage_ja.cpp  export.h  field.cpp  field.h  fieldDDF.cpp  fieldDDF.h  fieldNameAlias.cpp  (+48 more)
source/bzs/db/transactd/: appBuilderImple.h  appModule.cpp  appModule.h  connManager.cpp  connManager.h  connectionRecord.h  transactd.cpp
source/bzs/env/: boost_bcb_link.h  compiler.h  crosscompile.cpp  crosscompile.h  fileopen.h  mbcswchrLinux.cpp  mbcswchrLinux.h  tcharMinGW.h  tstring.h
source/bzs/example/: ORMap_c.cpp  changeSchema.cpp  changeSchema_c.cpp  connection_pool_c.cpp  createDatabase.cpp  createDatabase_c.cpp  deleteRecords.cpp  deleteRecords_c.cpp  dropDatabase.cpp  dropDatabase_c.cpp  insertRecords.cpp  insertRecords_c.cpp  queryData.cpp  queryData.h  query_c.cpp  readRecords.cpp  readRecords_c.cpp  transactdQuery.cpp  updateRecords.cpp  updateRecords_c.cpp  update_with_transaction.cpp  update_with_transaction_c.cpp  useORM.cpp  useORMRecord.cpp  useORMmap.cpp
source/bzs/netsvc/client/: iconnection.h  tcpClient.cpp  tcpClient.h
source/bzs/netsvc/server/: IAppModule.h  iserver.h  serverCpt.cpp  serverCpt.h  serverPipe.cpp  serverPipe.h  serverTpool.cpp  serverTpool.h
source/bzs/rtl/: benchmark.cpp  benchmark.h  datetime.cpp  datetime.h  debuglog.cpp  debuglog.h  exception.h  lzss.cpp  lzss.h  stl_uty.cpp  stl_uty.h  stringBuffers.cpp  stringBuffers.h  strtrim.cpp  strtrim.h
source/bzs/test/tdclatl/: bench_query_atl.js  bench_tdclatl.js  test_query_atl.js  test_v3.js
source/bzs/test/tdclphp/: bench.php  transactd_Test.php  transactd_blob_Test.php  transactd_datetime_Test.php  transactd_kanjischema_Test.php  transactd_pool_Test.php  transactd_v3_Test.php
source/bzs/test/tdclrb/: bench_tdclcpp.rb  prepare.rb  transactd_blob_spec.rb  transactd_datetime_spec.rb  transactd_fetch_spec.rb  transactd_kanjischema_spec.rb  transactd_pool_spec.rb  transactd_setget_spec.rb  transactd_spec.rb  transactd_v3_spec.rb
source/bzs/test/transactdBench/: queryData.cpp  queryData.h  query_bench.cpp  scaling_bench.cpp  transactdBench.cpp  transactdBench2.cpp  workerBase.cpp  workerBase.h  workerMySQLImple.h  workerTransactdImple.h
source/bzs/test/trdclengn/: testField.h  test_blob.cpp  test_tdclcpp_ha.cpp  test_tdclcpp_v3.cpp  test_trdclengn.cpp  test_trdclfilter.cpp  test_trdclfilter.h  testbase.h
source/global/ormsrcgen/: confParam.h  fieldName.cpp  fieldName.h  main.cpp  srcgen.cpp  srcgen.h
source/global/ormsrcgen/template/: fieldNameList_sample.txt  ormDataClass_template.cpp  ormDataClass_template.h  ormMapClass_template.cpp  ormMapClass_template.h  template.cnf
source/global/querystmts/: querystmts.cpp
source/global/replication/: haCommand.cpp  haCommand.h  haMgr.cpp  replCommand.cpp  replCommand.h
source/global/tdclatl/: BinlogPos.cpp  BinlogPos.h  Bitset.cpp  Bitset.h  Bookmark.cpp  Bookmark.h  ConnMgr.cpp  ConnMgr.h  ConnRecord.cpp  ConnRecord.h  ConnRecords.cpp  ConnRecords.h  ConnectParams.cpp  ConnectParams.h  Database.cpp  Database.h  DbDef.cpp  DbDef.h  Field.cpp  Field.h  FieldDef.cpp  FieldDef.h  FieldDefs.cpp  FieldDefs.h  FieldNames.cpp  FieldNames.h  Flags.cpp  Flags.h  GroupQuery.cpp  GroupQuery.h  HaNameREsolver.cpp  HaNameREsolver.h  KeyDef.cpp  KeyDef.h  KeySegment.cpp  PooledDbManager.cpp  PooledDbManager.h  PreparedQuery.cpp  PreparedQuery.h  QueryBase.cpp  (+26 more)
source/linux/: charsetConvert.h  linuxTypes.h  tchar.h
(+10 files in other folders)
